[package]
name = "goxoy-key-value"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Goxoy/goxoy-key-value/"
keywords = ["key-value-db","kv-db","SQLite-key-value-DB","SQLite-db"]
description = "Goxoy Key Value DB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }